--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   </head>
   <body>
     <div id="container">
-      <header></header>
+      <header>
+        <nav>
+          <ul>
+            <li><a src="Home.html">Home</a></li>
+            <li><a src="Creation.html">Creation</a></li>
+            <li><a src="Race.html">Race</a></li>
+            <li><a src="Replay.html">Replay</a></li>
+            <li><a src="Leaderboard.html">Leaderboard</a></li>
+          </ul>
+        </nav>
+      </header>
       <main></main>
       <footer></footer>
     </div>
