--- a/bunnyCreation.html
+++ b/bunnyCreation.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
-<<<<<<< HEAD
         <script src = "js/bunnyCreation.js" ></script>
     </head>
     <body>
@@ -15,6 +14,8 @@
             <div id="frmTop" >
                 <label>Points to spend: </label>
                 <label id = "points">100</label>
+                <br>
+                <label id = "errorLabel">You don't have enough points for that!</label>
             </div>
             <div id="frmBodyLeft" >
                 <br><br>
@@ -23,15 +24,12 @@
                 <br><br>
                 <label for="speed">Speed: </label>
                 <input type="number" name="txtSpeed" id = "speed" placeholder="Choose your speed">
-                <label id = "distanceError">You don't have enough points for that!</label>
                 <br><br>
                 <label for="distance">Distance: </label>
                 <input type="number" name="txtDistance" id = "distance" placeholder="Choose your distance">
-                <label id = "speedError">You don't have enough points for that!</label>
                 <br><br>
                 <label for="rest">Rest: </label>
                 <input type="number" name="txtRest" id = "rest" placeholder="Choose your rest level">
-                <label id = "restError">You don't have enough points for that!</label>
             </div>
             <div id = "frmBodyRight" >
                 <div id ="bunnyImage" >IMAGE PLACEHOLDER</div>
@@ -42,10 +40,5 @@
         </form>
     </div>
     <div id = "pageFooter" ></div>
-=======
     </head>
-    <body>
-        <h1>Creation page</h1>
->>>>>>> 1ece678d83aeaded6a38896c130003e4e0ae57d3
-    </body>
 </html>
