--- a/bunnySelection.html
+++ b/bunnySelection.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
     <script src="js/bunnySelection.js"></script>
   </head>
   <body>
@@ -21,6 +24,8 @@
         </nav>
       </header>
       <main>
+        <input type="text" placeholder="Type a username to see his bunnies" id="username">
+ +      <input type="button" id="btnUserBunnies" value="Search">
       </main>
       <footer></footer>
     </div>
