--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </ul>
         </nav>
       </header>
-      <main></main>
+      <main>Index pagina</main>
       <footer></footer>
     </div>
   </body>
